--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -3,11 +3,11 @@ name: Build And Deploy
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
-      - master
+      - main
 jobs:
   build_and_deploy_job:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
