--- a/k8s.yaml
+++ b/k8s.yaml
@@ -23,7 +23,7 @@ spec:
         vault.hashicorp.com/agent-inject-secret-config: "/kv/je"
         vault.hashicorp.com/agent-inject-template-config: |
           {{ with secret "/kv/je" -}}
-            export DATABASE_URL="{{ .Data.data.DATABASE_URL
+            export DATABASE_URL="{{ .Data.data.DATABASE_URL}}"
             export AUTH_SECRET="{{ .Data.data.AUTH_SECRET }}"
             export AUTH_ORIGIN="{{ .Data.data.AUTH_ORIGIN }}"
             export GOOGLE_CLIENT_ID="{{ .Data.data.GOOGLE_CLIENT_ID }}"
