--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "build": "nuxt build --dotenv .env",
     "dev": "nuxt dev --host --dotenv .env",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
