--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vueuse/core": "^11.3.0",
     "@vueuse/nuxt": "^11.3.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.36.4",
     "drizzle-zod": "^0.5.1",
     "next-auth": "4.21.1",
